# s0ve

./: README.md  TODO.md
example/array/: CMakeLists.txt  main.cpp
example/array/data/: save.csv  save.txt
example/csv/: CMakeLists.txt  main.cpp
example/csv/data/: save.csv
example/simple/: CMakeLists.txt  main.cpp
include/s0ve/: array.h  csv.h  double.h  save.h
include/s0ve/ascii/: double.h  save.h
